# XiaoQinglong

./: .gitignore  LICENSE  Makefile  README-RUN.md  README-en.md  README.md
backend/agent-frame/: .dockerignore  .gitignore  .golangci.yml  DDD.md  Makefile  README.md  go.mod  go.sum  main.go  skills.md
backend/runner/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  HOW-USE.md  README.md  a2a.go  approval.go  approval_helper.go  (+19 more)
backend/runner-langchain/: .dockerignore  .gitignore  README.md  pyproject.toml
backend/runner-langchain/app/: __init__.py  main.py
backend/runner-langchain/app/agent/: checkpoint.py  factory.py  loop.py  react.py  skills.py
backend/runner-langchain/app/api/: routes.py  schemas.py
backend/runner-langchain/app/memory/: __init__.py  context_compressor.py  extractor.py  reviewer.py  store.py
backend/runner-langchain/app/middleware/: __init__.py  approval.py
backend/runner-langchain/app/skills/: __init__.py  loader.py  manager.py
backend/runner-langchain/app/subagent/: __init__.py  constants.py  manager.py
backend/runner-langchain/app/tools/: __init__.py  approval.py  bash.py  browser.py  delegate.py  edit.py  file_ops.py  glob.py  grep.py  html_interpreter.py  loop.py  mcp.py  memory.py  parallel.py  plan_mode.py  question.py  registry.py  result_limiter.py  skill_script.py  skills.py  sleep.py  task.py  todo.py  web.py
backend/runner-langchain/app/utils/: dir.py
backend/runner-langchain/example/skills/test-skill/: SKILL.md
backend/runner-langchain/example/testdata/: README.md  test-00-llm.json
mock/: README.md
(+448 files in other folders)
