[project]
name = "runner-langchain"
version = "0.1.0"
description = "LangChain-based agent runner with hermes-agent style delegation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jett Jia", email = "jett@example.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0,<1.3",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "structlog>=24.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.14",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
lint = [
    "ruff>=0.8",
    "mypy>=1.14",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fixable = ["ALL"]
unused-disable = ["F401", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
